# Control2Gesture

./: AGENTS.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  quick_run.sh  requirements.txt
config/: gestures.yaml  gestures_muse.yaml
src/control2gesture/: __init__.py  __main__.py  action_mapper.py  config.py  controller.py  gesture_recognizer.py  gui.py  gui_model.py  hand_tracker.py  main.py
tests/: test_action_mapper.py  test_config.py  test_gesture_recognizer.py  test_gui_model.py
