[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "control2gesture"
version = "0.1.0"
description = "MediaPipe-based keyboard/mouse control from hand gestures"
requires-python = ">=3.9,<3.13"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
control2gesture = "control2gesture.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
